tests: github ci
Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

tests: github ci

Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

tests: github ci

Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

tests: github ci

Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

tests: github ci

Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

tests: github ci

Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

style: fix template syntax

Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

tests: github ci

Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

tests: github ci

Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

tests: github ci

Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

tests: github ci

Signed-off-by: Jérôme Engeln <jerome.engeln@adeliom.com>

--- a/assets/css/Action/index.css
+++ b/assets/css/Action/index.css
@@ -1,2 +1,2 @@
-@import './Button/index.css';
-@import './Dropdown/index.css';
+@import url('./Button/index.css');
+@import url('./Dropdown/index.css');
