--- a/templates/bundles/SyliusShopBundle/Homepage/_carousel.html.twig
+++ b/templates/bundles/SyliusShopBundle/Homepage/_carousel.html.twig
@@ -1,6 +1,6 @@
-{% set _nbProducts = products|length %}
+{% set nb_products = products|length %}
 <div class='w-full relative'>
-    {% if _nbProducts > 2 %}
+    {% if nb_products > 2 %}
         <div class="carousel w-full flex items-center relative">
             {% for product in products %}
                 {% include '@SyliusShop/Product/_box.html.twig' with {role: 'carousel-product', number: loop.index} %}
@@ -8,7 +8,7 @@
         </div>
 
         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide1" class="btn btn-circle">❮</a> 
+            <a href="#slide1" class="btn btn-circle">❮</a>
             <a href="#slide6" class="btn btn-circle">❯</a>
         </div>
     {% else %}
