--- a/templates/bundles/SyliusShopBundle/Checkout/_steps.html.twig
+++ b/templates/bundles/SyliusShopBundle/Checkout/_steps.html.twig
@@ -1,15 +1,15 @@
 {% import "@SyliusShop/Common/Macro/icons.html.twig" as icons %}
 
-{% set activeClass = ' step-info before:!bg-primary/50' %}
+{% set active_class = ' step-info before:!bg-primary/50' %}
 
 {% if active is not defined or active == 'address' %}
-    {% set steps = {address: activeClass, select_shipping: 'disabled', select_payment: 'disabled', complete: 'disabled'} %}
+    {% set steps = {address: active_class, select_shipping: 'disabled', select_payment: 'disabled', complete: 'disabled'} %}
 {% elseif active == 'select_shipping' %}
-    {% set steps = {address: 'step-success', select_shipping: activeClass, select_payment: 'disabled', complete: 'disabled'} %}
+    {% set steps = {address: 'step-success', select_shipping: active_class, select_payment: 'disabled', complete: 'disabled'} %}
 {% elseif active == 'select_payment' %}
-    {% set steps = {address: 'step-success', select_shipping: 'step-success', select_payment: activeClass, complete: 'disabled'} %}
+    {% set steps = {address: 'step-success', select_shipping: 'step-success', select_payment: active_class, complete: 'disabled'} %}
 {% else %}
-    {% set steps = {address: 'step-success', select_shipping: 'step-success', select_payment: 'step-success', complete: activeClass} %}
+    {% set steps = {address: 'step-success', select_shipping: 'step-success', select_payment: 'step-success', complete: active_class} %}
 {% endif %}
 
 
