--- a/templates/bundles/SyliusShopBundle/Checkout/_summary.html.twig
+++ b/templates/bundles/SyliusShopBundle/Checkout/_summary.html.twig
@@ -3,16 +3,16 @@
 {% set items_subtotal = sylius_order_items_subtotal(order) %}
 {% set tax_included = sylius_order_tax_included(order) %}
 {% set tax_excluded = sylius_order_tax_excluded(order) %}
-{% set itemClass = "text-sm font-bold py-2" %}
-{% set itemClassLight = "text-sm py-2" %}
-{% set containerClass = "flex flex-wrap justify-between py-2 items-center" %}
+{% set item_class = "text-sm font-bold py-2" %}
+{% set item_class_light = "text-sm py-2" %}
+{% set container_class = "flex flex-wrap justify-between py-2 items-center" %}
 
 <div class="card shrink-0 w-full shadow-2xl bg-base-100 gap-2 p-8" id="sylius-checkout-subtotal" {{ sylius_test_html_attribute('checkout-subtotal') }}>
     <ul class="list-style-none mb-0 p-0">
         <span class="wrapper-12 gap-2 items-center mb-4">
-            <span class="col-span-7 {{ itemClass }}">{{ 'sylius.ui.item'|trans }}</span>
-            <span class="col-span-1 md:text-center {{ itemClass }}">{{ 'sylius.ui.qty'|trans }}</span>
-            <span class="col-span-4 text-end {{ itemClass }}">{{ 'sylius.ui.subtotal'|trans }}</span>
+            <span class="col-span-7 {{ item_class }}">{{ 'sylius.ui.item'|trans }}</span>
+            <span class="col-span-1 md:text-center {{ item_class }}">{{ 'sylius.ui.qty'|trans }}</span>
+            <span class="col-span-4 text-end {{ item_class }}">{{ 'sylius.ui.subtotal'|trans }}</span>
         </span>
         {% for item in order.items %}
             {% set variant = item.variant %}
@@ -34,13 +34,13 @@
             </li>
         {% endfor %}
 
-        <div class="{{ containerClass }}">
-            <span class="{{ itemClass }}">{{ 'sylius.ui.items_total'|trans }}:</span>
+        <div class="{{ container_class }}">
+            <span class="{{ item_class }}">{{ 'sylius.ui.items_total'|trans }}:</span>
             <span class="h-fit text-sm">{{ money.convertAndFormat(items_subtotal) }}</span>
         </div>
 
-        <div class="{{ containerClass }}">
-            <span class="{{ itemClassLight }}">{{ 'sylius.ui.taxes_total'|trans }}:</span>
+        <div class="{{ container_class }}">
+            <span class="{{ item_class_light }}">{{ 'sylius.ui.taxes_total'|trans }}:</span>
             <div>
                 {% if not tax_included and not tax_excluded %}
                     <div id="sylius-summary-tax-none">{{ money.convertAndFormat(0) }}</div>
@@ -57,13 +57,13 @@
             </div>
         </div>
 
-        <div class="{{ containerClass }}">
-            <span class="{{ itemClass }}">{{ 'sylius.ui.discount'|trans }}:</span>
+        <div class="{{ container_class }}">
+            <span class="{{ item_class }}">{{ 'sylius.ui.discount'|trans }}:</span>
             <span id="sylius-summary-promotion-total" class="h-fit text-sm">{{ money.convertAndFormat(order.orderPromotionTotal) }}</span>
         </div>
 
-        <div class="{{ containerClass }}">
-            <span class="{{ itemClass }}">{{ 'sylius.ui.shipping_estimated_cost'|trans }}:</span>
+        <div class="{{ container_class }}">
+            <span class="{{ item_class }}">{{ 'sylius.ui.shipping_estimated_cost'|trans }}:</span>
             <span class="h-fit text-sm">
                 {% if order.getAdjustmentsTotal('shipping') > order.shippingTotal %}
                     <small>
@@ -74,7 +74,7 @@
             </span>
         </div>
 
-        <div class="{{ containerClass }}">
+        <div class="{{ container_class }}">
             <span class="heading-6">{{ 'sylius.ui.total'|trans }}:</span>
             <span id="sylius-summary-grand-total" class="heading-6">{{ money.convertAndFormat(order.total) }}</span>
         </div>
