--- a/templates/bundles/SyliusShopBundle/Cart/summary.html.twig
+++ b/templates/bundles/SyliusShopBundle/Cart/summary.html.twig
@@ -21,7 +21,7 @@
 				{{ sylius_template_event('sylius.shop.cart.items', {cart, form}) }}
 			</div>
 			<div class="col-span-full lg:col-span-4">
-				<div class="lg:ml-6 -mt-8 sticky-top z-0 card shrink-0 w-full shadow-2xl bg-base-100 gap-2 p-8">
+				<div class="lg:ml-6 -mt-8 sticky-top z-0 card shrink-0 w-full shadow-xl bg-base-100 gap-2 p-8">
 					{{ sylius_template_event('sylius.shop.cart.summary', {cart}) }}
 				</div>
 			</div>
