--- a/templates/bundles/SyliusShopBundle/Checkout/Complete/_form.html.twig
+++ b/templates/bundles/SyliusShopBundle/Checkout/Complete/_form.html.twig
@@ -1,3 +1,3 @@
-<div class="p-2 md:p-4 bg-light rounded">
-    {{ form_row(form.notes, sylius_test_form_attribute('extra-notes')|merge({attr: {rows: 3, class: 'textarea textarea-bordered w-full'}, row_attr: {class: 'mb-0'}})) }}
+<div class="bg-light rounded">
+	{{ form_row(form.notes, sylius_test_form_attribute('extra-notes')|merge({attr: {rows: 3, class: 'textarea textarea-bordered w-full'}, row_attr: {class: 'mb-0'}})) }}
 </div>
