--- a/templates/bundles/SyliusShopBundle/Checkout/_summary.html.twig
+++ b/templates/bundles/SyliusShopBundle/Checkout/_summary.html.twig
@@ -7,76 +7,77 @@
 {% set item_class_light = "text-sm py-2" %}
 {% set container_class = "flex flex-wrap justify-between py-2 items-center" %}
 
-<div class="card shrink-0 w-full shadow-2xl bg-base-100 gap-2 p-8" id="sylius-checkout-subtotal" {{ sylius_test_html_attribute('checkout-subtotal') }}>
-    <ul class="list-style-none mb-0 p-0">
-        <span class="wrapper-12 gap-2 items-center mb-4">
-            <span class="col-span-7 {{ item_class }}">{{ 'sylius.ui.item'|trans }}</span>
-            <span class="col-span-1 md:text-center {{ item_class }}">{{ 'sylius.ui.qty'|trans }}</span>
-            <span class="col-span-4 text-end {{ item_class }}">{{ 'sylius.ui.subtotal'|trans }}</span>
-        </span>
-        {% for item in order.items %}
-            {% set variant = item.variant %}
-            {% set product = variant.product %}
+<div class="card shrink-0 w-full shadow-xl bg-base-100 gap-2 p-8" id="sylius-checkout-subtotal" {{ sylius_test_html_attribute('checkout-subtotal') }}>
+	<ul class="list-style-none mb-0 p-0">
+		<span class="wrapper-12 gap-2 items-center mb-4">
+			<span class="col-span-7 {{ item_class }}">{{ 'sylius.ui.item'|trans }}</span>
+			<span class="col-span-1 md:text-center {{ item_class }}">{{ 'sylius.ui.qty'|trans }}</span>
+			<span class="col-span-4 text-end {{ item_class }}">{{ 'sylius.ui.subtotal'|trans }}</span>
+		</span>
+		{% for item in order.items %}
+			{% set variant = item.variant %}
+			{% set product = variant.product %}
 
-            <li class="wrapper-12 items-center gap-2 py-2">
-                {# <div class="col-span-2">{% include '@SyliusShop/Product/_mainImage.html.twig' with {product, filter: 'sylius_shop_product_tiny_thumbnail'} %}</div> #}
-                <div class="col-span-7 flex flex-col justify-center">
-                    <p class="text-sm">{{ item.getVariant.product.name }}</p>
-                </div>
-                <div class="col-span-1 md:text-center">
-                    <div class="text-sm">
-                        <span class="">{{ item.quantity }}</span>
-                    </div>
-                </div>
-                <div class="col-span-4 text-end text-sm" id="sylius-item-{{ item.variant.product.slug }}-subtotal" {{ sylius_test_html_attribute('item-subtotal', item.variant.product.slug) }}>
-                    {{ money.convertAndFormat(item.subtotal) }}
-                </div>
-            </li>
-        {% endfor %}
+			<li
+				class="wrapper-12 items-center gap-2 py-2">
+				{# <div class="col-span-2">{% include '@SyliusShop/Product/_mainImage.html.twig' with {product, filter: 'sylius_shop_product_tiny_thumbnail'} %}</div> #}
+				<div class="col-span-7 flex flex-col justify-center">
+					<p class="text-sm">{{ item.getVariant.product.name }}</p>
+				</div>
+				<div class="col-span-1 md:text-center">
+					<div class="text-sm">
+						<span class="">{{ item.quantity }}</span>
+					</div>
+				</div>
+				<div class="col-span-4 text-end text-sm" id="sylius-item-{{ item.variant.product.slug }}-subtotal" {{ sylius_test_html_attribute('item-subtotal', item.variant.product.slug) }}>
+					{{ money.convertAndFormat(item.subtotal) }}
+				</div>
+			</li>
+		{% endfor %}
 
-        <div class="{{ container_class }}">
-            <span class="{{ item_class }}">{{ 'sylius.ui.items_total'|trans }}:</span>
-            <span class="h-fit text-sm">{{ money.convertAndFormat(items_subtotal) }}</span>
-        </div>
+		<div class="{{ container_class }}">
+			<span class="{{ item_class }}">{{ 'sylius.ui.items_total'|trans }}:</span>
+			<span class="h-fit text-sm">{{ money.convertAndFormat(items_subtotal) }}</span>
+		</div>
 
-        <div class="{{ container_class }}">
-            <span class="{{ item_class_light }}">{{ 'sylius.ui.taxes_total'|trans }}:</span>
-            <div>
-                {% if not tax_included and not tax_excluded %}
-                    <div id="sylius-summary-tax-none">{{ money.convertAndFormat(0) }}</div>
-                {% endif %}
-                {% if tax_excluded %}
-                    <div class="text-right text-sm" id="sylius-summary-tax-excluded">{{ money.convertAndFormat(tax_excluded) }}</div>
-                {% endif %}
-                {% if tax_included %}
-                    <div class="text-right text-sm">
-                        <div class="h-fit" id="sylius-summary-tax-included">{{ money.convertAndFormat(tax_included) }}</div>
-                        <small>({{ 'sylius.ui.included_in_price'|trans }})</small>
-                    </div>
-                {% endif %}
-            </div>
-        </div>
+		<div class="{{ container_class }}">
+			<span class="{{ item_class_light }}">{{ 'sylius.ui.taxes_total'|trans }}:</span>
+			<div>
+				{% if not tax_included and not tax_excluded %}
+					<div id="sylius-summary-tax-none">{{ money.convertAndFormat(0) }}</div>
+				{% endif %}
+				{% if tax_excluded %}
+					<div class="text-right text-sm" id="sylius-summary-tax-excluded">{{ money.convertAndFormat(tax_excluded) }}</div>
+				{% endif %}
+				{% if tax_included %}
+					<div class="text-right text-sm">
+						<div class="h-fit" id="sylius-summary-tax-included">{{ money.convertAndFormat(tax_included) }}</div>
+						<small>({{ 'sylius.ui.included_in_price'|trans }})</small>
+					</div>
+				{% endif %}
+			</div>
+		</div>
 
-        <div class="{{ container_class }}">
-            <span class="{{ item_class }}">{{ 'sylius.ui.discount'|trans }}:</span>
-            <span id="sylius-summary-promotion-total" class="h-fit text-sm">{{ money.convertAndFormat(order.orderPromotionTotal) }}</span>
-        </div>
+		<div class="{{ container_class }}">
+			<span class="{{ item_class }}">{{ 'sylius.ui.discount'|trans }}:</span>
+			<span id="sylius-summary-promotion-total" class="h-fit text-sm">{{ money.convertAndFormat(order.orderPromotionTotal) }}</span>
+		</div>
 
-        <div class="{{ container_class }}">
-            <span class="{{ item_class }}">{{ 'sylius.ui.shipping_estimated_cost'|trans }}:</span>
-            <span class="h-fit text-sm">
-                {% if order.getAdjustmentsTotal('shipping') > order.shippingTotal %}
-                    <small>
-                        <s>{{ money.convertAndFormat(order.getAdjustmentsTotal('shipping')) }}</s>
-                    </small>
-                {% endif %}
-                <span id="sylius-summary-shipping-total">{{ money.convertAndFormat(order.shippingTotal) }}</span>
-            </span>
-        </div>
+		<div class="{{ container_class }}">
+			<span class="{{ item_class }}">{{ 'sylius.ui.shipping_estimated_cost'|trans }}:</span>
+			<span class="h-fit text-sm">
+				{% if order.getAdjustmentsTotal('shipping') > order.shippingTotal %}
+					<small>
+						<s>{{ money.convertAndFormat(order.getAdjustmentsTotal('shipping')) }}</s>
+					</small>
+				{% endif %}
+				<span id="sylius-summary-shipping-total">{{ money.convertAndFormat(order.shippingTotal) }}</span>
+			</span>
+		</div>
 
-        <div class="{{ container_class }}">
-            <span class="heading-6">{{ 'sylius.ui.total'|trans }}:</span>
-            <span id="sylius-summary-grand-total" class="heading-6">{{ money.convertAndFormat(order.total) }}</span>
-        </div>
-    </ul>
+		<div class="{{ container_class }}">
+			<span class="heading-6">{{ 'sylius.ui.total'|trans }}:</span>
+			<span id="sylius-summary-grand-total" class="heading-6">{{ money.convertAndFormat(order.total) }}</span>
+		</div>
+	</ul>
 </div>
