--- a/templates/bundles/SyliusShopBundle/Layout/Footer/_content.html.twig
+++ b/templates/bundles/SyliusShopBundle/Layout/Footer/_content.html.twig
@@ -1,20 +1,22 @@
 <div class="wrapper-12 align-items-center pt-10">
-    <div class="col-span-full text-center ">
-        &copy;
-        {{ 'sylius.ui.your_store'|trans }}.
-        {{ 'sylius.ui.powered_by'|trans }}
-        <a href="https://sylius.com" class="link-primary" target="_blank">Sylius</a> & <a href="https://adeliom.com" class="link-primary" target="_blank">Adeliom</a>.
-    </div>
+	<div class="col-span-full text-center ">
+		&copy;
+		{{ 'sylius.ui.your_store'|trans }}.
+		{{ 'sylius.ui.powered_by'|trans }}
+		<a href="https://sylius.com" class="link" target="_blank" aria-label="Sylius official website (new window)">Sylius</a>
+		&
+		<a href="https://adeliom.com" class="link" target="_blank" aria-label="Adeliom Agency official website (new window)">Adeliom</a>.
+	</div>
 
-    <div class="col-span-full flex gap-3 justify-center">
-        <a target="_blank" class="nav-link" href="//facebook.com/SyliusEcommerce/">
-            <i class="fab fa-facebook fa-2x"></i>
-        </a>
-        <a target="_blank" class="nav-link" href="//instagram.com/sylius.team/">
-            <i class="fab fa-instagram fa-2x"></i>
-        </a>
-        <a target="_blank" class="nav-link" href="//twitter.com/sylius">
-            <i class="fab fa-twitter fa-2x"></i>
-        </a>
-    </div>
+	<div class="col-span-full flex gap-3 justify-center">
+		<a target="_blank" class="nav-link" href="//facebook.com/SyliusEcommerce/" aria-label="Follow us on Facebook (New window)">
+			<i class="fab fa-facebook fa-2x"></i>
+		</a>
+		<a target="_blank" class="nav-link" href="//instagram.com/sylius.team/" aria-label="Follow us on Instagram (New window)">
+			<i class="fab fa-instagram fa-2x"></i>
+		</a>
+		<a target="_blank" class="nav-link" href="//twitter.com/sylius" aria-label="Follow us on X (New window)">
+			<i class="fab fa-twitter fa-2x"></i>
+		</a>
+	</div>
 </div>
