--- a/templates/bundles/SyliusShopBundle/Layout/Topbar/_themeSwitcher.html.twig
+++ b/templates/bundles/SyliusShopBundle/Layout/Topbar/_themeSwitcher.html.twig
@@ -1,11 +1,13 @@
 <div class="dropdown dropdown-start dropdown-sm z-[101]">
-    <div tabindex="0" role="button">
-        Theme
-        <svg width="12px" height="12px" class="h-2 w-2 fill-current opacity-60 inline-block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2048 2048"><path d="M1799 349l242 241-1017 1017L7 590l242-241 775 775 775-775z"></path></svg>
-    </div>
-    <ul tabindex="0" class="dropdown-content dropdown-header">
-        <li><input type="radio" name="theme-dropdown" class="theme-controller dropdown-item-header justify-start" aria-label="Dark" value="dark"/></li>
-        <li><input type="radio" name="theme-dropdown" class="theme-controller dropdown-item-header justify-start" aria-label="Light" value="light"/></li>
-        <li><input type="radio" name="theme-dropdown" class="theme-controller dropdown-item-header justify-start" aria-label="Adeliom" value="adeliom"/></li>
-    </ul>
+	<div tabindex="0" role="button">
+		Theme
+		<svg width="12px" height="12px" class="h-2 w-2 fill-current opacity-60 inline-block" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 2048 2048">
+			<path d="M1799 349l242 241-1017 1017L7 590l242-241 775 775 775-775z"></path>
+		</svg>
+	</div>
+	<ul class="dropdown-content dropdown-header gap-2" tabindex="0">
+		<li><input type="radio" name="theme-dropdown" class="theme-controller dropdown-item-header justify-start" aria-label="Dark" value="dark"/></li>
+		<li><input type="radio" name="theme-dropdown" class="theme-controller dropdown-item-header justify-start" aria-label="Light" value="light"/></li>
+		<li><input type="radio" name="theme-dropdown" class="theme-controller dropdown-item-header justify-start" aria-label="Adeliom" value="adeliom"/></li>
+	</ul>
 </div>
