--- a/templates/bundles/SyliusShopBundle/Account/AddressBook/index.html.twig
+++ b/templates/bundles/SyliusShopBundle/Account/AddressBook/index.html.twig
@@ -4,42 +4,46 @@
 {% import '@SyliusShop/Common/Macro/headers.html.twig' as headers %}
 {% import "@SyliusShop/Common/Macro/icons.html.twig" as icons %}
 
-{% block title %}{{ 'sylius.ui.address_book'|trans }} | {{ parent() }}{% endblock %}
+{% block title %}
+	{{ 'sylius.ui.address_book'|trans }}
+	|
+	{{ parent() }}
+{% endblock %}
 
 {% block subcontent %}
-    <div class="w-full flex flex-wrap md:justify-between">
-        <div class="w-fit flex flex-col">
-            {{ headers.default('sylius.ui.address_book'|trans, '', 'sylius.ui.manage_your_saved_addresses'|trans) }}
+	<div class="w-full flex flex-col md:flex-row md:justify-between">
+		<div class="w-fit flex flex-col gap-2">
+			{{ headers.default('sylius.ui.address_book'|trans, '', 'sylius.ui.manage_your_saved_addresses'|trans) }}
 
-            {{ sylius_template_event('sylius.shop.account.address_book.index.after_content_header', {'addresses': addresses}) }}
-        </div>
-        <div class="w-fit flex flex-col max-md:mb-4">
-            <a href="{{ path('sylius_shop_account_address_book_create') }}" class="btn btn-outlined md:mt-8">
-                {{ icons.plus() }}
-                {{ 'sylius.ui.add_address'|trans }}
-            </a>
+			{{ sylius_template_event('sylius.shop.account.address_book.index.after_content_header', {'addresses': addresses}) }}
+		</div>
+		<div class="w-fit flex flex-col">
+			<a href="{{ path('sylius_shop_account_address_book_create') }}" class="btn btn-outlined md:mt-8">
+				{{ icons.plus() }}
+				{{ 'sylius.ui.add_address'|trans }}
+			</a>
 
-            {{ sylius_template_event('sylius.shop.account.address_book.index.after_add_address_button', {'addresses': addresses}) }}
-        </div>
-    </div>
+			{{ sylius_template_event('sylius.shop.account.address_book.index.after_add_address_button', {'addresses': addresses}) }}
+		</div>
+	</div>
 
-    {% if addresses|length > 0 %}
-        <div class="grid grid-cols-12 gap-6" id="sylius-addresses" {{ sylius_test_html_attribute('addresses') }}>
-            {% set default_address = (sylius.customer.defaultAddress) %}
+	{% if addresses|length > 0 %}
+		<div class="grid grid-cols-12 gap-6 mt-6" id="sylius-addresses" {{ sylius_test_html_attribute('addresses') }}>
+			{% set default_address = (sylius.customer.defaultAddress) %}
 
-            {% if default_address is not null %}
-                <div class="col-span-full">
-                    {% include '@SyliusShop/Account/AddressBook/_defaultAddress.html.twig' with {'address': default_address} %}
-                </div>
-            {% endif %}
+			{% if default_address is not null %}
+				<div class="col-span-full">
+					{% include '@SyliusShop/Account/AddressBook/_defaultAddress.html.twig' with {'address': default_address} %}
+				</div>
+			{% endif %}
 
-            {% for address in addresses|filter(address => default_address is null or address.id != default_address.id) %}
-                <div class="col-span-full" id="sylius-addresses" {{ sylius_test_html_attribute('addresses') }}>
-                    {% include '@SyliusShop/Account/AddressBook/_item.html.twig' %}
-                </div>
-            {% endfor %}
-        </div>
-    {% else %}
-        {{ messages.info('sylius.ui.you_have_no_addresses_defined') }}
-    {% endif %}
+			{% for address in addresses|filter(address => default_address is null or address.id != default_address.id) %}
+				<div class="col-span-full" id="sylius-addresses" {{ sylius_test_html_attribute('addresses') }}>
+					{% include '@SyliusShop/Account/AddressBook/_item.html.twig' %}
+				</div>
+			{% endfor %}
+		</div>
+	{% else %}
+		{{ messages.info('sylius.ui.you_have_no_addresses_defined') }}
+	{% endif %}
 {% endblock %}
