--- a/templates/bundles/SyliusShopBundle/Account/layout.html.twig
+++ b/templates/bundles/SyliusShopBundle/Account/layout.html.twig
@@ -1,24 +1,23 @@
 {% extends '@SyliusShop/layout.html.twig' %}
 
 {% block content %}
-    <div class='container'>
-        {% block breadcrumb '' %}
-    </div>
+<div class='container'>
+	{% block breadcrumb '' %}
+	</div>
 
-    <section class='container grid grid-cols-12 gap-x-6'>
+	<section class='container grid grid-cols-12 gap-x-6'>
 
 
-        <div class='col-span-full lg:col-span-3 mb-10 lg:mb-0 card shrink-0 w-full max-w-sm shadow-2xl bg-base-100 p-6 lg:p-8 h-fit'>
-            {{ sylius_template_event('sylius.shop.account.layout.menu') }}
-        </div>
+		<div class='col-span-full mb-10 card shrink-0 w-full shadow-xl bg-base-100 h-fit p-4 lg:p-8 lg:col-span-4 lg:mb-0 xl:col-span-3'>
+			{{ sylius_template_event('sylius.shop.account.layout.menu') }}
+		</div>
 
-        <div class='col-span-full lg:col-start-4 lg:col-end-13 lg:pl-20'>
-            {{ sylius_template_event('sylius.shop.account.layout.before_subcontent') }}
+		<div class='col-span-full lg:col-start-5 lg:col-end-13 lg:pl-10 xl:col-start-4 xl:pl-20'>
+			{{ sylius_template_event('sylius.shop.account.layout.before_subcontent') }}
 
-            {% block subcontent %}
-            {% endblock %}
+			{% block subcontent %}{% endblock %}
 
-            {{ sylius_template_event('sylius.shop.account.layout.after_subcontent') }}
-        </div>
-    </section>
+			{{ sylius_template_event('sylius.shop.account.layout.after_subcontent') }}
+		</div>
+	</section>
 {% endblock %}
