--- a/templates/bundles/SyliusShopBundle/Common/Order/Table/_item.html.twig
+++ b/templates/bundles/SyliusShopBundle/Common/Order/Table/_item.html.twig
@@ -7,34 +7,34 @@
 {% set product = variant.product %}
 
 <li class="wrapper-12 py-2 md:py-4 border-b border-light" {{ sylius_test_html_attribute('product-row', item.productName) }}>
-    <div class="col-span-full md:col-span-4 lg:col-span-2">
-        {% include '@SyliusShop/Product/_mainImage.html.twig' with {product, 'filter': 'sylius_shop_product_tiny_thumbnail'} %}
-    </div>
+	<div class="col-span-full md:col-span-4 lg:col-span-2">
+		{% include '@SyliusShop/Product/_mainImage.html.twig' with {product, 'filter': 'sylius_shop_product_tiny_thumbnail'} %}
+	</div>
 
-    <div class="col-span-8">
-        {% include '@SyliusShop/Product/_info.html.twig' with {variant} %}
+	<div class="col-span-full md:col-span-8">
+		{% include '@SyliusShop/Product/_info.html.twig' with {variant} %}
 
-        {{ item.quantity }}
-        x
-        {% if item.unitPrice != item.discountedUnitPrice %}
-            <small class="old-price" {{ sylius_test_html_attribute('product-old-price', item.productName) }}>
-                <s>{{ money.convertAndFormat(item.unitPrice) }}</s>
-            </small>
-        {% endif %}
+		{{ item.quantity }}
+		x
+		{% if item.unitPrice != item.discountedUnitPrice %}
+			<small class="old-price" {{ sylius_test_html_attribute('product-old-price', item.productName) }}>
+				<s>{{ money.convertAndFormat(item.unitPrice) }}</s>
+			</small>
+		{% endif %}
 
-        <span class="sylius-unit-price" {{ sylius_test_html_attribute('product-unit-price', item.productName) }}>
+		<span class="sylius-unit-price" {{ sylius_test_html_attribute('product-unit-price', item.productName) }}>
 			{{ money.convertAndFormat(item.discountedUnitPrice) }}
-            {% if item.unitPrice != item.discountedUnitPrice %}
-                <span id="item-promotion-details" title="{% for promotion in unit_promotions %}<div>{{ promotion.label }}: {{ money.convertAndFormat(promotion.amount) }}</div>{% endfor %}" data-bs-toggle="tooltip" data-placement="top">
+			{% if item.unitPrice != item.discountedUnitPrice %}
+				<span id="item-promotion-details" title="{% for promotion in unit_promotions %}<div>{{ promotion.label }}: {{ money.convertAndFormat(promotion.amount) }}</div>{% endfor %}" data-bs-toggle="tooltip" data-placement="top">
 					<i class="fas fa-question-circle"></i>
 				</span>
-            {% endif %}
+			{% endif %}
 		</span>
 
-    </div>
+	</div>
 
-    <div class="col-span-full md:col-span-4 lg:col-span-2 text-end font-bold">
-        {{ money.convertAndFormat(item.subtotal) }}
-    </div>
+	<div class="col-span-full md:col-span-4 lg:col-span-2 text-end font-bold">
+		{{ money.convertAndFormat(item.subtotal) }}
+	</div>
 
 </li>
