--- a/templates/bundles/SyliusShopBundle/Common/Order/_payments.html.twig
+++ b/templates/bundles/SyliusShopBundle/Common/Order/_payments.html.twig
@@ -2,29 +2,29 @@
 {% import "@SyliusShop/Common/Macro/icons.html.twig" as icons %}
 
 <div class="w-full flex flex-col p-5 border border-base rounded lg:h-full">
-    <div class="">
-        <b>{{ 'sylius.ui.payment'|trans }}</b>
-    </div>
-    <div class="">
-        {% for payment in order.payments %}
-            {% set state = payment.state %}
+	<div class="">
+		<b>{{ 'sylius.ui.payment'|trans }}</b>
+	</div>
+	<div class="">
+		{% for payment in order.payments %}
+			{% set state = payment.state %}
 
-            <div class="list-group list-group-flush flex flex-wrap items-center flex-row gap-2 lg:gap-3 mt-4">
-                {{ icons.creditCard('text-gray-500') }}
-                <div class=''>
-                    <div id="sylius-payment-method" {{ sylius_test_html_attribute('payment-method') }}>
-                        <strong>{{ payment.method }}</strong>
-                    </div>
+			<div class="list-group list-group-flush flex flex-wrap items-center flex-row gap-4 mt-4">
+				{{ icons.creditCard('text-gray-500') }}
+				<div class='flex flex-1 flex-wrap gap-x-4 gap-y-2'>
+					<div id="sylius-payment-method" {{ sylius_test_html_attribute('payment-method') }}>
+						<strong>{{ payment.method }}</strong>
+					</div>
 
-                    <div {{ sylius_test_html_attribute('payment-price') }}>{{ money.format(payment.amount, payment.currencyCode) }}</div>
+					<div {{ sylius_test_html_attribute('payment-price') }}>{{ money.format(payment.amount, payment.currencyCode) }}</div>
 
-                    {% if state != 'cart' %}
-                        <p id="payment-status" {{ sylius_test_html_attribute('payment-state') }}>
-                            {% include "@SyliusShop/Common/Order/Label/PaymentState/singlePaymentState.html.twig" with {state} %}
-                        </p>
-                    {% endif %}
-                </div>
-            </div>
-        {% endfor %}
-    </div>
+					{% if state != 'cart' %}
+						<p id="payment-status" {{ sylius_test_html_attribute('payment-state') }}>
+							{% include "@SyliusShop/Common/Order/Label/PaymentState/singlePaymentState.html.twig" with {state} %}
+						</p>
+					{% endif %}
+				</div>
+			</div>
+		{% endfor %}
+	</div>
 </div>
