--- a/templates/bundles/SyliusShopBundle/Product/Show/_addToCart.html.twig
+++ b/templates/bundles/SyliusShopBundle/Product/Show/_addToCart.html.twig
@@ -10,7 +10,7 @@
 	{{ form_start(form, {'action': path('sylius_shop_ajax_cart_add_item', {'productId': product.id}), 'attr': {'id': 'sylius-product-adding-to-cart', 'data-js-add-to-cart': 'form', 'class': 'loadable', 'novalidate': 'novalidate', 'data-redirect': path(configuration.getRedirectRoute('summary'))}}) }}
 
 	{{ form_errors(form) }}
-	<div class="alert alert-danger hidden" data-js-add-to-cart="error" id="sylius-cart-validation-error" {{ sylius_test_html_attribute('cart-validation-error') }}></div>
+	<div class="alert alert-warning hidden" data-js-add-to-cart="error" id="sylius-cart-validation-error" {{ sylius_test_html_attribute('cart-validation-error') }}></div>
 	{% if not product.simple %}
 		{% if product.variantSelectionMethodChoice %}
 			{% include '@SyliusShop/Product/Show/_variants.html.twig' %}
