--- a/templates/bundles/SyliusShopBundle/layout.html.twig
+++ b/templates/bundles/SyliusShopBundle/layout.html.twig
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta content="width=device-width, initial-scale=1, maximum-scale=5" name="viewport">
 
 		<title>
 			{% block title %}
@@ -11,9 +12,10 @@
 			{% endblock %}
 		</title>
 
-		<meta content="width=device-width, initial-scale=1, maximum-scale=5" name="viewport">
-
-		{% block metatags '' %}
+        {% block metatags %}
+            <meta name="description" content="Sylius Tailwindcss & DaisyUI theme">
+            <meta name="keywords" content="Sylius, Tailwindcss, DaisyUI">
+        {% endblock %}
 
 		{% block stylesheets %}
 			{{ sylius_template_event('sylius.shop.layout.stylesheets') }}
